--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Geon-Woo Kim # the website title (if blank, full name will be used instea
 first_name: Geon-Woo
 middle_name:
 last_name: Kim
-email: gwsshs22@snu.ac.kr
+email: gwkim@utexas.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
